[macosx] Initialization of Cocoa hangs if CoreAudio was initialized before

XMLWordPrintable

    • b24
    • b54
    • x86
    • os_x

        Testsuite name:JCK manual
        Test name:api/javax_sound/interactive/PlayMidiTests.html#PlayMidiTest
        Product tested: JDK 9b43 64bit
        OS/architecture:Mac10.9-x64 (Processor:2.4GHz Intel Core i5;Memory:4GB 1600MHz DDR3)
         
        Error log file (if present):http://scaaa008.us.oracle.com:9502/runs%2F667363.ManualSubmit-1/workDir/api/javax_sound/interactive/PlayMidiTests_PlayMidiTest.jtr

        Reproducible: Always
        Reproducible on machine: Evergreen-machine
        [If Sometimes] Also reproducible on machine:

        Is it a Regression:YES
        ([If Regression]) Regression introduced in release/build:JDK 9b24(64bit)/Mac 10.9-x64,Fail

        Test result on the last GAed release for this train:
        ([if Fail] Test result on FCS:

        Is it a platform specific issue:YES(same build on Solaris10-sparc pass)
        Is it a new (previously unsupported) OS/browser/mode testing: NO
        ([If new configuration testing] Issue specific to execution mode or OS/browser version:)

        Steps to reproduce:
        1. Install test bundle jdk8u11b06 from http://jre.us.oracle.com/java/re/jdk/9/promoted/ea/b43/bundles/macosx-x86_64/jdk-9-ea-macosx-x86_64.dmg to /Library/Java/JavaVirtualMachines/

        2. Download the JCK-runtime-9.jar from http://jre.us.oracle.com/java/re/jck/9/promoted/ea/latest/bundles/ to /workspace/jck/ and use /Library/Java/JavaVirtualMachines/jdk1.9.0.jdk/Contents/Home/bin/java -jar JCK-runtime-9.jar to unzip it

        3.Then run this case as following:
        /Library/Java/JavaVirtualMachines/jdk1.9.0.jdk/Contents/Home/bin/java -showversion -cp /workspace/jck/JCK-runtime-9/classes:/Library/Java/JavaVirtualMachines/jdk1.9.0.jdk/Contents/Home/lib/tools.jar -Djava.security.policy=/workspace/jck/JCK-runtime-9/lib/jck.policy javasoft.sqe.tests.api.javax.sound.interactive.PlayMidiTest -platform.canPlayMidi true -TestCaseID ALL -TestDirURL file:/workspace/jck/JCK-runtime-9/tests/api/javax_sound/interactive/PlayMidiTests.html#PlayMidiTest -timeoutFactor 1.0
         
        Descriptions:

        Actual behavior:
        1.While the case launching,the test window icon will show in the windows toolbar,but the test window can not show on the desktop,refer to PlayMidiTests.jpg.
        2.We can not do the test,and we must kill the process to continue the next test.

        These cases have the same issue:
        api/javax_sound/interactive/PlaySoundTest.html#PlaySoundTest
        api/javax_sound/interactive/RecordSoundTest.html#RecordSoundTest

        Validation:
        JDK 9b01(64bit)/Mac 10.9-x64,Pass
        JDK 9b11(64bit)/Mac 10.9-x64,Pass
        JDK 9b21(64bit)/Mac 10.9-x64,Pass
        JDK 9b23(64bit)/Mac 10.9-x64,Pass
        JDK 9b24(64bit)/Mac 10.9-x64,Fail
        JDK 9b25(64bit)/Mac 10.9-x64,Fail
        JDK 9b31(64bit)/Mac 10.9-x64,Fail
        JDK 9b32(64bit)/Mac 10.9-x64,Fail
        JDK 9b33(64bit)/Mac 10.9-x64,Fail

          1. PlayMidiTests.jpg
            3.78 MB
            Michael Wang
          2. stacktrace_jstackfailcase.txt
            8 kB
            Vaibhav Choudhary

              Assignee:
              Sergey Bylokhov
              Reporter:
              Michael Wang (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: