8068412: [macosx] Initialization of Cocoa hangs if CoreAudio was initialized before

Reviewed-by: azvegint, prr